--- a/Capitulo3/covid19.html
+++ b/Capitulo3/covid19.html
@@ -30,7 +30,7 @@
       padding: 6px 8px;
       font: 13px/16px Verdana, Geneva, sans-serif;
       background: white;
-      background: rgba(255, 255, 255, 0.8);
+      background: #59E80C;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
       border-radius: 10px;
     }
@@ -64,7 +64,11 @@
 
     .legend .circlepadding {
       border-radius: 50%;
-      background: rgba(255, 255, 255, 0.85);
+      background: #59E80C;
+    }
+
+    .leaflet-popup-content-wrapper {
+      background-color: #8EFFF0
     }
   </style>
 </head>
